# EffiCare

./: .gitignore  .gitmodules  README.md  collect.py  decompensation-epoch13.csv.json  evaluate.sh  finetune.py  in_hospital_mortality-epoch13.csv.json  insight.py  length_of_stay_regression-epoch13.csv.json  metrics.py  phenotyping-epoch13.csv.json  pyproject.toml  run.py  utils.py
dataloader/: data.py  extractors.py  labels.py  utils.py
embeddings/: sentences.mimic3.txt.counts
models/: __init__.py  encoders.py  models.py  modules.py
